# cdsapi

./: .gitignore  CONTRIBUTING.rst  MANIFEST.in  README.rst  example-era5-update.py  example-era5.py  example-glaciers.py  pyproject.toml  setup.cfg  setup.py  test.py  tox.ini
.github/workflows/: check-and-publish.yml  label-public-pr.yml
cdsapi/: __init__.py  abstract_legacy_client.py  api.py  beta_api.py  legacy_client.py
docker/: .gitignore  Dockerfile  README.md  request.json  retrieve.py
examples/: example-era5-update.py  example-era5.py
tests/: requirements-dev.txt  requirements-tests.in  requirements-tests.txt  requirements.txt  test_api.py
