[build-system]
requires = ["setuptools >=62.6"]
build-backend = "setuptools.build_meta"

[project]
name = "cdsapi"
version = "0.6.1"
description = "Python API to access the Copernicus Climate Data Store (CDS)"
readme = "README.rst"
authors = [
    {name = "ECMWF", email = "software.support@ecmwf.int"},
]
keywords = ["MODFLOW", "groundwater", "hydrogeology"]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "requests >=2.5.0",
    "tqdm",
]
dynamic = ["optional-dependencies"]

[project.urls]
"Source Code" = "https://github.com/ecmwf/cdsapi"

[tool.setuptools.dynamic.optional-dependencies.tests]
file = "tests/requirements.txt"

[tool.setuptools.packages.find]
include = ["cdsapi", "cdsapi.*"]

[tool.black]
line-length = 120

[tool.coverage.run]
branch = true

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
norecursedirs = [
    "build",
    "dist",
    ".tox",
    ".eggs",
]
pep8maxlinelength = 109
mccabe-complexity = 10
